Cambios en frontend de /admin peliculas, cositas de imagenes

--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -146,3 +146,10 @@ input[type="text"].placeholder-light::placeholder {
 .nav-link:hover {
   color: #dc3545; /* danger color */
 }
+
+.card-img {
+  max-height: 500px;
+  max-width: fit-content;
+  object-fit: contain;
+  object-position: top;
+}
