--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -188,3 +188,14 @@ input[type="text"].placeholder-light::placeholder {
   background-color: #343a40; /* Color de fondo oscuro para las opciones del select */
   color: #fff; /* Color de texto blanco */
 }
+
+.btn-custom-warning:hover {
+  background-color: #b88a00; /* Color de fondo amarillo */
+  border-color: #e4ab00; /* Borde con color amarillo */
+}
+
+.btn-custom-light:hover {
+  color: #1a1a1a;
+  background-color: #666666; /* Color de fondo gris claro */
+  border-color: #666666; /* Borde con color gris claro */
+}
