--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -203,3 +203,16 @@ input[type="text"].placeholder-light::placeholder {
 .bg-dark-70{
   background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro con opacidad del 50% */
 }
+
+
+.btn-custom-delete-img{
+  transition: 0.2s;
+}
+
+.btn-custom-delete-img:hover{
+  opacity: 0.2; /* Opacidad del 70% */
+  
+  background-color: #dc3545; /* Color de fondo rojo */
+  border-color: #dc3545; /* Borde con color rojo */
+  
+}
